login quase corrido

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
     "require": {
         "stripe/stripe-php": "^7.0",
         "phpmailer/phpmailer": "^6.9"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
